force-app/main/default/objects/CLP_Line_Item__c/fields/Amount_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_After_Tax__c</fullName>
    <label>Amount After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>