force-app/main/default/objects/CLP_Line_Item__c/fields/Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable__c</fullName>
    <label>Amount Payable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>