force-app/main/default/objects/CLP_Line_Item__c/fields/CLP_Master__c.field-meta.xml
<CustomField>
    <fullName>CLP_Master__c</fullName>
    <label>CLP Master</label>
    <referenceTo>CLP_Master__c</referenceTo>
    <relationshipLabel>CLP Line Items</relationshipLabel>
    <relationshipName>CLP_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>