force-app/main/default/objects/CLP_Line_Item__c/fields/CLP_Type__c.field-meta.xml
<CustomField>
    <fullName>CLP_Type__c</fullName>
    <label>CLP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Exterior Finishing - (On completion of external plumbing, external Plaster, elevation,  terrace with waterproofing of the wing in which premises in located) &quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Internal Finishing - (on Completion of walls, internal plaster, flooring,doors windows of the Premises)&quot;</fullName>
            </value>
            <value>
                <fullName>After 30 days of Booking</fullName>
            </value>
            <value>
                <fullName>After 60 days of Booking (on Agreement)</fullName>
            </value>
            <value>
                <fullName>Apr-20</fullName>
            </value>
            <value>
                <fullName>Apr-21</fullName>
            </value>
            <value>
                <fullName>Apr-22</fullName>
            </value>
            <value>
                <fullName>Booking Amount</fullName>
            </value>
            <value>
                <fullName>Booking Amount (Part II) - within 7 days from the Application</fullName>
            </value>
            <value>
                <fullName>Completion of Excavation</fullName>
            </value>
            <value>
                <fullName>Completion of Plinth</fullName>
            </value>
            <value>
                <fullName>Final Booking Amount (Part III) - within 45 days from the Application</fullName>
            </value>
            <value>
                <fullName>Final Booking Amount(Part III) - Within 60 days from the Application</fullName>
            </value>
            <value>
                <fullName>Final Booking Amount (Part III) - within 65 days from the Application</fullName>
            </value>
            <value>
                <fullName>Final Booking Amount(Part III) - within 75 days from the Application</fullName>
            </value>
            <value>
                <fullName>Final Booking Amount (Part III) - within 90 days from the Application</fullName>
            </value>
            <value>
                <fullName>May-20</fullName>
            </value>
            <value>
                <fullName>May-21</fullName>
            </value>
            <value>
                <fullName>May-22</fullName>
            </value>
            <value>
                <fullName>on completion of 10th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 12th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 14th Slab</fullName>
            </value>
            <value>
                <fullName>on completion of 15th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 16th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 20th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 23th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 24th Slab</fullName>
            </value>
            <value>
                <fullName>on completion of 25th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 28th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 32nd Slab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>