force-app/main/default/objects/CLP_Line_Item__c/fields/SAP_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>SAP_Condition_Type__c</fullName>
    <label>SAP Condition Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>