force-app/main/default/objects/CLP_Line_Item__c/fields/SAP_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_No__c</fullName>
    <label>SAP No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>