force-app/main/default/objects/CLP_Line_Item__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>